--- a/aula2_mlop_infra/notebooks/bonsai_classifier.ipynb
+++ b/aula2_mlop_infra/notebooks/bonsai_classifier.ipynb
@@ -7,6 +7,7 @@
    "source": [
     "## MLflow 3.3.1 Best Practices and MLOps Workflow\n",
     "\n",
+    "Added by RUI\n",
     "This notebook demonstrates a complete MLOps workflow using MLflow 3.3.1, including:\n",
     "\n",
     "- **Experiment Tracking:** Logging parameters, metrics, and artifacts (confusion matrix, predictions CSV) for reproducibility.\n",
@@ -48,10 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "752f67cc-54cf-40f2-afe7-387993031cd8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ MLflow already installed\n",
+      "🎯 MLflow Tracking URI: http://mlflow:5000\n",
+      "🚀 Ready to track experiments!\n"
+     ]
+    }
+   ],
    "source": [
     "# First, let's install MLflow in this container and set up the connection\n",
     "import subprocess\n",
@@ -98,10 +109,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a96a8720-eca0-4173-9ed5-a5976750862c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🌱 Bonsai Dataset created:\n",
+      "Training samples: 240\n",
+      "Test samples: 60\n",
+      "Features: ['leaf_length_cm', 'leaf_width_cm', 'branch_thickness_mm', 'height_cm']\n",
+      "Species classes: ['Juniper', 'Ficus', 'Pine', 'Maple']\n",
+      "\n",
+      "📊 Sample bonsai measurements:\n",
+      "   leaf_length_cm  leaf_width_cm  branch_thickness_mm  height_cm species\n",
+      "0        1.380904       1.188396             1.650313  19.065886   Ficus\n",
+      "1        1.893503       1.425476             5.341917  30.000305   Maple\n",
+      "2        2.007036       1.334003             7.963199  24.248633   Maple\n",
+      "3        2.892563       1.966694             5.784386  14.109763   Maple\n",
+      "4        3.342822       2.035872             5.564911   9.854393   Maple\n"
+     ]
+    }
+   ],
    "source": [
     "import mlflow.sklearn\n",
     "from sklearn.datasets import make_classification\n",
@@ -165,10 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "067309aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nLog the bonsai dataset using MLflow Datasets (v3.3.1+)\\nimport mlflow.data\\n\\nbonsai_df.to_csv(f\"bonsai_dataset_{date}.csv\", index=False)\\n\\nwith mlflow.start_run() as run:\\n    dataset = mlflow.data.from_pandas(\\n        bonsai_df,\\n        source=f\"bonsai_dataset_{date}.csv\",\\n        name=\"bonsai_species_measurements\"\\n    )\\n    mlflow.log_input(dataset, context=\"training\")\\n    print(\"✅ Bonsai dataset logged as MLflow Dataset!\")\\n    run_id = run.info.run_id\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Log the bonsai dataset using MLflow Datasets (v3.3.1+)\n",
@@ -190,10 +232,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5c6cda93-8518-46f1-8c8c-53800636a243",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧪 Running multiple experiments for comparison...\n",
+      "============================================================\n",
+      "✅ Bonsai dataset logged as MLflow Dataset!\n",
+      "✅ baseline_model: Accuracy=0.617, F1=0.621\n",
+      "🏃 View run baseline_model at: http://mlflow:5000/#/experiments/1/runs/525899aa33a54f01a890d3ed609be4aa\n",
+      "🧪 View experiment at: http://mlflow:5000/#/experiments/1\n",
+      "✅ Bonsai dataset logged as MLflow Dataset!\n",
+      "✅ balanced_model: Accuracy=0.750, F1=0.753\n",
+      "🏃 View run balanced_model at: http://mlflow:5000/#/experiments/1/runs/eeaf3a3e636e4d808b7a955e9d1792a9\n",
+      "🧪 View experiment at: http://mlflow:5000/#/experiments/1\n",
+      "✅ Bonsai dataset logged as MLflow Dataset!\n",
+      "✅ complex_model: Accuracy=0.767, F1=0.762\n",
+      "🏃 View run complex_model at: http://mlflow:5000/#/experiments/1/runs/7e3a6c3aa9a9404caadcc05cac31e81d\n",
+      "🧪 View experiment at: http://mlflow:5000/#/experiments/1\n",
+      "✅ Bonsai dataset logged as MLflow Dataset!\n",
+      "✅ optimized_model: Accuracy=0.817, F1=0.817\n",
+      "🏃 View run optimized_model at: http://mlflow:5000/#/experiments/1/runs/80a9b9d9bee54dc68e3f4ce6bbd00492\n",
+      "🧪 View experiment at: http://mlflow:5000/#/experiments/1\n",
+      "\n",
+      "📊 Experiment Summary:\n",
+      "------------------------------------------------------------\n",
+      "🏆 optimized_model: 0.817 acc | 0.817 f1\n",
+      "   📝 Optimized model based on previous results\n",
+      "🏆 complex_model: 0.767 acc | 0.762 f1\n",
+      "   📝 More complex model for maximum performance\n",
+      "🏆 balanced_model: 0.750 acc | 0.753 f1\n",
+      "   📝 Balanced model between complexity and performance\n",
+      "🏆 baseline_model: 0.617 acc | 0.621 f1\n",
+      "   📝 Baseline model with conservative settings\n",
+      "\n",
+      "🌐 Compare experiments in MLflow UI: http://localhost:5001\n",
+      "💡 Use 'Compare' to view differences side by side!\n"
+     ]
+    }
+   ],
    "source": [
     "# Experiments with different configurations to compare performance\n",
     "import mlflow\n",
